started work on dynamic user table
